[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = "(manm-cs|tests/cuda)"
required-version = "22.3.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "run_testPyPI",
    "run_slow",
]
