[metadata]
name = gpucsl
version = 0.0.7
author = Tom Braun, Petr Tsayun, Dominik Meier, Ben Hurdelhey
author_email = author@example.com
description = A library for constraint-based causal structure learning on GPUs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hpi-epic/gpucsl
project_urls =
    Bug Tracker = https://github.com/hpi-epic/gpucsl/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
include_package_data=True
python_requires = >=3.8
install_requires =
    numpy
    scipy
    pandas
    networkx
    scikit-learn
    colorama

[options.extras_require]
dev =
    pytest
    pytest-lazy-fixture
    pytest-mock
    pytest-timeout
    flake8
    black==22.3.0
    black[jupyter]==22.3.0
    build
    pytest-cov
    virtualenv
    manm-cs>=0.1.0
    twine
    seaborn
    gdown

[options.packages.find]
where = .

[flake8]
per-file-ignores = __init__.py:F401
extend-ignore = E203
max-line-length = 88
